# QtTinaSkia

./: .gitignore  CMakeLists.txt  README-zh.md  README.md  syncSkia-gitee.bat  syncSkia-gitee.sh  syncSkia.bat  syncSkia.sh
QtSkia/: CMakeLists.txt
QtSkia/QtSkiaCommon/: CMakeLists.txt
QtSkia/QtSkiaGui/: CMakeLists.txt  QSkiaOpenGLWindow.cpp
QtSkia/QtSkiaQuick/: CMakeLists.txt
QtSkia/QtSkiaQuick/QuickItem/: QSkiaQuickItem.cpp
QtSkia/QtSkiaQuick/QuickWindow/: QSkiaQuickWindow.cpp
QtSkia/QtSkiaWidget/: CMakeLists.txt  QSkiaOpenGLWidget.cpp  QSkiaWidget.cpp
cmake/: CompilerWarnings.cmake  SkiaConfig.cmake
doc/upgrade/: README.md  api-migration-guide.md  implementation-checklist.md  qt6-adaptation-guide.md  skia-upgrade-plan.md
examples/: CMakeLists.txt
examples/FeatureShow/: CMakeLists.txt
examples/HelloSkiaOpenGLWidget/: CMakeLists.txt
examples/HelloSkiaOpenGLWindow/: CMakeLists.txt  SkiaGLWindow.h
examples/HelloSkiaQuickItem/: CMakeLists.txt  SkiaQuickItem.h
examples/HelloSkiaQuickWindow/: CMakeLists.txt  SkiaQuickWindow.h
examples/HelloSkiaWidget/: CMakeLists.txt
examples/MixWidget/: CMakeLists.txt  SkWidget.cpp
examples/Renderer/: BezierRender.cpp  CMakeLists.txt  ComposeRender.cpp  DiscretePathRender.cpp  RotationsRender.cpp  SampleRender.cpp  ShaderRender.cpp  ShapesRender.cpp  SumPathRender.cpp  TextRender.cpp
